Fix Jump to Lifehack mobile size to acceptable by lighthouse

--- a/assets/css/resposive.css
+++ b/assets/css/resposive.css
@@ -309,9 +309,14 @@
     }
 
     #jump-to-lifehack {
+        font-size: 0.6rem;
         float: right;
         width: 80%;
         font-size: 1em;  
+    }
+
+    #jump-to-lifehack a {
+        height: 35px;
     }
 
     #work-life {
